--- a/Salary.ipynb
+++ b/Salary.ipynb
@@ -11,24 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -227,12 +227,12 @@
        "3  Less than half the time, but at least one day ...   \n",
        "4                                              Never   \n",
        "\n",
-       "                CompanySize       ...       StackOverflowMakeMoney Gender  \\\n",
-       "0                       NaN       ...            Strongly disagree   Male   \n",
-       "1        20 to 99 employees       ...            Strongly disagree   Male   \n",
-       "2  10,000 or more employees       ...                     Disagree   Male   \n",
-       "3  10,000 or more employees       ...                     Disagree   Male   \n",
-       "4        10 to 19 employees       ...                          NaN    NaN   \n",
+       "                CompanySize  ... StackOverflowMakeMoney Gender  \\\n",
+       "0                       NaN  ...      Strongly disagree   Male   \n",
+       "1        20 to 99 employees  ...      Strongly disagree   Male   \n",
+       "2  10,000 or more employees  ...               Disagree   Male   \n",
+       "3  10,000 or more employees  ...               Disagree   Male   \n",
+       "4        10 to 19 employees  ...                    NaN    NaN   \n",
        "\n",
        "  HighestEducationParents                          Race         SurveyLong  \\\n",
        "0             High school  White or of European descent  Strongly disagree   \n",
@@ -258,7 +258,7 @@
        "[5 rows x 154 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,24 +279,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -315,33 +315,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>51392.000000</td>\n",
-       "      <td>42695.000000</td>\n",
-       "      <td>40376.000000</td>\n",
-       "      <td>20600.000000</td>\n",
-       "      <td>36592.000000</td>\n",
-       "      <td>12891.000000</td>\n",
-       "      <td>2566.000000</td>\n",
+       "      <td>19102.000000</td>\n",
+       "      <td>16102.000000</td>\n",
+       "      <td>15253.000000</td>\n",
+       "      <td>7721.000000</td>\n",
+       "      <td>13452.000000</td>\n",
+       "      <td>5009.000000</td>\n",
+       "      <td>818.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>25696.500000</td>\n",
-       "      <td>7.300574</td>\n",
-       "      <td>6.957078</td>\n",
-       "      <td>3.952282</td>\n",
-       "      <td>8.429875</td>\n",
-       "      <td>56298.480641</td>\n",
-       "      <td>33142.220468</td>\n",
+       "      <td>9551.500000</td>\n",
+       "      <td>7.343932</td>\n",
+       "      <td>7.000721</td>\n",
+       "      <td>3.685922</td>\n",
+       "      <td>8.357865</td>\n",
+       "      <td>58341.398571</td>\n",
+       "      <td>32231.521687</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>14835.736854</td>\n",
-       "      <td>1.955444</td>\n",
-       "      <td>2.167652</td>\n",
-       "      <td>7.564722</td>\n",
-       "      <td>1.390635</td>\n",
-       "      <td>39880.905277</td>\n",
-       "      <td>30162.988829</td>\n",
+       "      <td>5514.416757</td>\n",
+       "      <td>1.919330</td>\n",
+       "      <td>2.128648</td>\n",
+       "      <td>7.330691</td>\n",
+       "      <td>1.405546</td>\n",
+       "      <td>40753.384986</td>\n",
+       "      <td>28543.877274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -355,43 +355,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>12848.750000</td>\n",
+       "      <td>4776.250000</td>\n",
        "      <td>6.000000</td>\n",
        "      <td>6.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>8.000000</td>\n",
-       "      <td>26440.371839</td>\n",
-       "      <td>4490.492484</td>\n",
+       "      <td>27956.989247</td>\n",
+       "      <td>4716.459735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>25696.500000</td>\n",
+       "      <td>9551.500000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>50000.000000</td>\n",
-       "      <td>29364.263691</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>51612.903226</td>\n",
+       "      <td>29784.946237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>38544.250000</td>\n",
+       "      <td>14326.750000</td>\n",
        "      <td>9.000000</td>\n",
        "      <td>8.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>80000.000000</td>\n",
-       "      <td>50403.225806</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>83333.333333</td>\n",
+       "      <td>50000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>51392.000000</td>\n",
+       "      <td>19102.000000</td>\n",
        "      <td>10.000000</td>\n",
        "      <td>10.000000</td>\n",
        "      <td>40.000000</td>\n",
        "      <td>10.000000</td>\n",
-       "      <td>197000.000000</td>\n",
-       "      <td>187500.000000</td>\n",
+       "      <td>195000.000000</td>\n",
+       "      <td>120000.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -399,27 +399,27 @@
       ],
       "text/plain": [
        "         Respondent  CareerSatisfaction  JobSatisfaction  HoursPerWeek  \\\n",
-       "count  51392.000000        42695.000000     40376.000000  20600.000000   \n",
-       "mean   25696.500000            7.300574         6.957078      3.952282   \n",
-       "std    14835.736854            1.955444         2.167652      7.564722   \n",
+       "count  19102.000000        16102.000000     15253.000000   7721.000000   \n",
+       "mean    9551.500000            7.343932         7.000721      3.685922   \n",
+       "std     5514.416757            1.919330         2.128648      7.330691   \n",
        "min        1.000000            0.000000         0.000000      0.000000   \n",
-       "25%    12848.750000            6.000000         6.000000      1.000000   \n",
-       "50%    25696.500000            8.000000         7.000000      1.000000   \n",
-       "75%    38544.250000            9.000000         8.000000      4.000000   \n",
-       "max    51392.000000           10.000000        10.000000     40.000000   \n",
+       "25%     4776.250000            6.000000         6.000000      0.000000   \n",
+       "50%     9551.500000            8.000000         7.000000      1.000000   \n",
+       "75%    14326.750000            9.000000         8.000000      3.000000   \n",
+       "max    19102.000000           10.000000        10.000000     40.000000   \n",
        "\n",
        "       StackOverflowSatisfaction         Salary  ExpectedSalary  \n",
-       "count               36592.000000   12891.000000     2566.000000  \n",
-       "mean                    8.429875   56298.480641    33142.220468  \n",
-       "std                     1.390635   39880.905277    30162.988829  \n",
+       "count               13452.000000    5009.000000      818.000000  \n",
+       "mean                    8.357865   58341.398571    32231.521687  \n",
+       "std                     1.405546   40753.384986    28543.877274  \n",
        "min                     0.000000       0.000000        0.000000  \n",
-       "25%                     8.000000   26440.371839     4490.492484  \n",
-       "50%                     9.000000   50000.000000    29364.263691  \n",
-       "75%                    10.000000   80000.000000    50403.225806  \n",
-       "max                    10.000000  197000.000000   187500.000000  "
+       "25%                     8.000000   27956.989247     4716.459735  \n",
+       "50%                     8.000000   51612.903226    29784.946237  \n",
+       "75%                     9.000000   83333.333333    50000.000000  \n",
+       "max                    10.000000  195000.000000   120000.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,23 +481,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float64').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-d4ca72996be1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mlm_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Here you could set any hyperparameters of your model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mlm_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# If this model was to predict for new individuals, we probably would want\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m                \u001b[0;31m# worry about train/test splits and cross-validation, but for now I am most\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                \u001b[0;31m# interested in finding a model that just fits all of the data well\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/joshuabernhard/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    510\u001b[0m         \u001b[0mn_jobs_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    511\u001b[0m         X, y = check_X_y(X, y, accept_sparse=['csr', 'csc', 'coo'],\n\u001b[0;32m--> 512\u001b[0;31m                          y_numeric=True, multi_output=True)\n\u001b[0m\u001b[1;32m    513\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    514\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matleast_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/joshuabernhard/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    519\u001b[0m     X = check_array(X, accept_sparse, dtype, order, copy, force_all_finite,\n\u001b[1;32m    520\u001b[0m                     \u001b[0mensure_2d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_nd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 521\u001b[0;31m                     ensure_min_features, warn_on_dtype, estimator)\n\u001b[0m\u001b[1;32m    522\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    523\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
-      "\u001b[0;32m/Users/joshuabernhard/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    405\u001b[0m                              % (array.ndim, estimator_name))\n\u001b[1;32m    406\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mforce_all_finite\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 407\u001b[0;31m             \u001b[0m_assert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m     \u001b[0mshape_repr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_shape_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/joshuabernhard/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X)\u001b[0m\n\u001b[1;32m     56\u001b[0m             and not np.isfinite(X).all()):\n\u001b[1;32m     57\u001b[0m         raise ValueError(\"Input contains NaN, infinity\"\n\u001b[0;32m---> 58\u001b[0;31m                          \" or a value too large for %r.\" % X.dtype)\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float64')."
-     ]
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=True)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -512,8 +507,14 @@
     "# In most cases, we also will want to split data into training and test data to assure \n",
     "# we are not building models that overfit the data and do not extend well to new situations.\n",
     "\n",
+    "df = df.dropna(subset=['Salary'], axis=0)\n",
+    "\n",
+    "num_vars = df.select_dtypes(include=['int', 'float']).copy().columns\n",
+    "for col in num_vars:\n",
+    "    df[col].fillna((df[col].mean()), inplace=True)\n",
     "X = df[['CareerSatisfaction', 'HoursPerWeek', 'JobSatisfaction', 'StackOverflowSatisfaction']]\n",
     "y = df['Salary']\n",
+    "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .30, random_state=42)\n",
     "\n",
@@ -525,16 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(51392, 154)"
+       "(5009, 154)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,15 +552,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0309946649591\n",
-      "1546382888.05\n"
+      "0.03257139063404435\n",
+      "1613399219.6517828\n"
      ]
     }
    ],
@@ -590,16 +591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5338, 5)"
+       "(5009, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5774,7 +5775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
